# mikrotik_update

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mu.py  requirements-dev.txt  requirements.txt  sample.yaml  setup.cfg
libs/: config.py  configmanager.py  device.py  logger.py  userregistrator.py
mu/: __main__.py  config.py  configmanager.py  device.py  logger.py  main.py  mu_screen.py  userregistrator.py
tests/: config_test.py  configmanager_test.py  device_test.py  logger_test.py  mu_test.py
